isolated-ns/ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
    name: ubuntuapp-isolated
    namespace: isolated-ns
    labels:
      app: ubuntuapp
spec:
  containers:
    - name: ubuntuapp
      image: ubuntu-upstart
      command: ["tail"]
      args: ["-f", "/dev/null"]
