isolated-ns/nginx-server-isolated-ns.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-server-isolated-ns
  namespace: isolated-ns
spec:
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: nginx
  name: nginx-server-isolated-ns-svc
  namespace: isolated-ns
spec:
  ports:
  - port: 80
  selector:
    app: nginx
status:
  loadBalancer: {}
