isolated-ns/network-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: network-policy
 namespace: isolated-ns
spec:
 podSelector:
  matchLabels:
    app: nginx
 ingress:
  - from:
     - podSelector:
        matchLabels:
         app: ubuntuapp
